--- a/hashnode-diaries/src/app/globals.css
+++ b/hashnode-diaries/src/app/globals.css
@@ -2,27 +2,110 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+hr {
+  padding: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
 }
 
-body {
-  overflow: hidden;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.post-details {
+  padding: 1rem;
+  width: 100%;
+}
+
+.post-details p {
+  color: rgb(17, 22, 20);
+  margin: 2px;
+}
+
+.post-details h2 {
+  font-size: 25px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.post-details h3 {
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.post-details img {
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.post-details UL {
+  margin: 5px;
+  padding: 15px;
+}
+.post-details li {
+  list-style: square;
+}
+
+.post-details p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.post-details a {
+  text-decoration: underline;
+}
+
+.post-details pre {
+  border: 1px solid #ebebeb;
+  border-radius: 5px;
+  padding: 2px;
+  margin: 2px;
+  background-color: rgb(246, 244, 244);
+}
+
+.about-content {
+  padding: 1rem;
+  width: 100%;
+}
+
+.about-content h1 {
+  font-size: 25px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.about-content p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.about-content UL {
+  margin: 5px;
+  padding: 5px;
+}
+
+.about-content UL LI {
+  padding: 5px;
+  margin: 5px;
+}
+
+.about-content UL LI a {
+  margin-right: 2px;
+  text-decoration: underline;
 }
